<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding"
    tools:context=".MainActivity">

    <TextView
        android:textSize="@dimen/medium_font"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_mahasiswa"/>

    <TextView
        android:layout_marginTop="@dimen/small_padding"
        android:textSize="@dimen/medium_font"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim_mahasiswa"/>

    <TextView
        android:layout_marginTop="64dp"
        android:textSize="@dimen/medium_font"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aplikasi Pertemuan Empat"/>

    <Button
        android:clickable="true"
        android:onClick="onButtonLayoutListClick"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_baseline_backup_table_24_white"
        android:text="@string/contoh_layout"
        android:layout_marginTop="128dp"
        android:id="@+id/btn_layoutlist"
        android:layout_width="@dimen/home_button_size"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_baseline_article_24_white"
        android:text="@string/contoh_listview"
        android:id="@+id/btn_listview"
        android:layout_width="@dimen/home_button_size"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_baseline_border_all_24_white"
        android:text="@string/contoh_gridview"
        android:id="@+id/btn_gridview"
        android:layout_width="@dimen/home_button_size"
        android:layout_height="wrap_content"/>

</LinearLayout>